# Gitnoter

./: .gitignore  CMakeLists.txt  GitNoteR-Demo.pro  GitNoteR-Destop-Demo.pro  GitNoteR-Qt-Desktop.pro  Gitnoter.icns  Gitnoter.pro  Gitnoter.rc  README.md  categorieswidget.cpp  categorieswidget.h  categorieswidget.ui  database.cpp  database.h  document.cpp  gitnoter.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  notemodel.cpp  notemodel.h  version.h
GitNoteR/: GitNoteR.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui
controllers/: GitManager.cpp  GitManager.h  aboutdialog.cpp  appconfig.cpp  appconfig.h  categorieslistcell.cpp  categorieslistcell.h  categorieswidget.cpp  categorieswidget.h  categorylistwidget.cpp  categorylistwidget.h  database.cpp  database.h  elidedlabel.cpp  elidedlabel.h  enterlicensedialog.cpp  globals.cpp  globals.h  grouptreewidget.cpp  grouptreewidget.h  importnotedialog.cpp  importnotedialog.h  lockdialog.cpp  lockdialog.h  loginwidget.cpp  loginwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  markdowneditorwidget.cpp  markdowneditorwidget.h  menubar.cpp  menubar.h  messagedialog.cpp  messagedialog.h  navigationbarwidget.h  notelistcellwidget.cpp  notelistcellwidget.h  notelistsortpopupmenu.cpp  notelistsortpopupmenu.h  (+14 more)
helps/: database.cpp  database.h  gitmanager.cpp  gitmanager.h  globals.cpp  globals.h  notepreviewwidget.cpp  previewpage.cpp  screenshot.cpp  screenshot.h  thememanager.cpp  thememanager.h  tools.cpp  tools.h
helps/qtinyaes/: qtinyaes.cpp
libgit2/: libgit2.pro
libgit2/src/: buffer.c
libgit2/src/win32/: posix.h
libgit2/tests/clar/: print.h  sandbox.h
libqgit2/: libqgit2.pro
libqgit2/qgit2/: qgitrepository.cpp  qgitstatusentry.cpp
libqgit2/tests/: Checkout.cpp  Clone.cpp  Diff.cpp  Fetch.cpp  Init.cpp  Push.cpp  Rebase.cpp  Repository.cpp  Revision.cpp  TestHelpers.h
libraries/include/: git2.h
libraries/lib/: libgit2.dylib
models/: categoriesmodel.cpp  categoriesmodel.h  categoriestablemodel.cpp  categoriestablemodel.h  categorisetablemodel.cpp  categorisetablemodel.h  categorymodel.cpp  categorymodel.h  categorymodellist.cpp  categorymodellist.h  configmodel.cpp  configmodel.h  configtablemodel.cpp  configtablemodel.h  contentmodel.cpp  contentmodel.h  gitnoter.h  groupmodel.cpp  groupmodel.h  notemodel.cpp  notemodel.h  notemodellist.cpp  notemodellist.h  notetablemodel.cpp  notetablemodel.h  tagmodel.cpp  tagmodel.h  tagmodellist.cpp  tagmodellist.h  tagsmodel.cpp  tagsmodel.h  tagstablemodel.cpp  tagstablemodel.h  tagtablemodel.cpp  tagtablemodel.h
qmake/: README.txt  common.pri  includes.pri
release-build/: .gitignore  README  package.json  release-linux.sh  release-osx.sh  release-windows.bat  release.bat  release.sh
release-build/package-osx/: package.json
resources/: default.md  index.html  markdown.css  markdowneditor.qrc  resources.qrc
resources/database/: gitnoter.db  gitnoter.sql
resources/html/marked/: index.html  markdown.css
resources/marked/: default.md  index.html
resources/theme/: default.qss  notelistcellwidget-selected.qss  notelistcellwidget-unselected.qss
src/: .gitignore  CMakeLists.txt  Gitnoter.icns  Gitnoter.pro  gitnoter.h  main.cpp  version.h
src/controllers/: aboutdialog.cpp  aboutdialog.h  categorylistwidget.cpp  categorylistwidget.h  enterlicensedialog.cpp  enterlicensedialog.h  grouptreewidget.cpp  importnotedialog.cpp  importnotedialog.h  lockdialog.cpp  loginwidget.cpp  loginwidget.h  mainwindow.cpp  mainwindow.h  markdowneditorwidget.cpp  markdowneditorwidget.h  menubar.cpp  menubar.h  messagedialog.cpp  messagedialog.h  navigationbarwidget.cpp  notelistcellwidget.cpp  notelistcellwidget.h  notelistsortpopupmenu.h  notelistwidget.cpp  notepreviewwidget.cpp  notepreviewwidget.h  settingdialog.cpp  settingdialog.h  tagcellwidget.cpp  tagcellwidget.h
src/helps/: gitmanager.cpp  gitmanager.h  globals.cpp  globals.h  notepreviewwidget.cpp  notepreviewwidget.h  screenshot.cpp  screenshot.h  singletimeout.cpp  singletimeout.h  thememanager.h  tools.cpp  tools.h
src/models/: configmodel.cpp  configmodel.h  groupmodel.cpp  notemodel.cpp  notemodel.h
src/resources/: resources.qrc
src/resources/html/appinfo/: about.html
src/resources/theme/: windows-default.qss
src/views/: lockdialog.ui  loginwidget.ui  mainwindow.ui  markdowneditorwidget.ui  notelistcellwidget.ui  settingdialog.ui
tools/: document.h  globals.cpp  previewpage.h  tools.h
views/: aboutdialog.ui  categorieslistcell.ui  categorieswidget.ui  categorylistwidget.ui  enterlicensedialog.ui  importnotedialog.ui  lockdialog.ui  loginwidget.ui  mainwindow.ui  markdowneditorwidget.ui  menubar.ui  messagedialog.ui  notelistcellwidget.ui  settingdialog.ui  tagcellwidget.ui  tagorcategorylistcellwidget.ui  tagslistcell.ui  tagswidget.ui
